--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="{{url_for('static', filename='favion.ico')}}" type="image/x-icon">
     <link rel="icon" href="{{url_for('static', filename='favion.ico')}}" type="image/x-icon">
-    <title>vocabulary</title>
+    <title>Vocabulary</title>
 
 
     <!-- jquery,bootstrap js  -->
